...
                  )}
                </Pressable>
              </View>
            </View>
          ) : (
            <>
              <Text testID="post-title" style={styles.postTitle}>
                {post.title}
              </Text>
              <Text style={styles.postBody}>{post.body}</Text>
            </>
          )}

...
